[package]
name = "fr-store"
version = "0.1.0"
edition = "2024"

[dependencies]
fr-expire = { version = "0.1.0", path = "../fr-expire" }
fr-protocol = { version = "0.1.0", path = "../fr-protocol" }
fr-persist = { version = "0.1.0", path = "../fr-persist" }
fr-sentinel = { version = "0.1.0", path = "../fr-sentinel" }
fr-simd = { version = "0.1.0", path = "../fr-simd" }
indexmap = "2"
foldhash = "0.1"
libc.workspace = true

[features]
bench-reference = []

[dev-dependencies]
proptest.workspace = true
criterion = "0.5"

[[bench]]
name = "store_read"
harness = false

[[bench]]
name = "set_algebra_build"
harness = false

[[bench]]
name = "zadd_encoding_refresh"
harness = false
required-features = ["bench-reference"]

# Same-worker profile and null-gated A/B for the monotonic XADD append path.
[[bench]]
name = "xadd_append"
harness = false
required-features = ["bench-reference"]

[[bench]]
name = "glob_scan"
harness = false
required-features = ["bench-reference"]

# (cc_fr) Same-binary null-gated A/B for expire_milliseconds re-setting a TTL: two-peek +
# to_vec original vs one-peek + borrowed-logical-key streamlined.
[[bench]]
name = "expire_reset"
harness = false

# (cc_fr) Same-binary null-gated A/B for the per-write side-cache invalidation: unconditional
# remove (hashes key vs empty maps) vs is_empty()-guarded.
[[bench]]
name = "write_cache_invalidation"
harness = false

# (cc_fr) Same-binary null-gated A/B for a no-TTL SET overwrite: always-clone owned key
# (GATE=false) vs clone elided without a TTL (GATE=true).
[[bench]]
name = "set_no_ttl_insert"
harness = false

# (cc_fr) Same-binary null-gated A/B for SET ... EX RE-ARMING a live-TTL key: always-clone owned
# key (GATE=false) vs in-place get_mut deadline update eliding the discarded clone (GATE=true).
[[bench]]
name = "set_ex_rearm"
harness = false

# Same-binary, null-gated instruction benchmark for plain PackedZSet::rank skipping each
# non-returned record's score decode (ZRANK-miss full scan).
[[bench]]
name = "packed_zset_locate"
harness = false
required-features = ["bench-reference"]

# Same-binary, null-gated instruction benchmark for PackedZSet::pop_max locating the final
# record without decoding every discarded score.
[[bench]]
name = "packed_zset_pop_max"
harness = false
required-features = ["bench-reference"]

# Same-binary, null-gated instruction benchmark for PackedZSet::rank_with_score decoding only the
# matching record's score.
[[bench]]
name = "packed_zset_rank_with_score"
harness = false
required-features = ["bench-reference"]

# Same-binary, null-gated instruction benchmark for ending a packed score-range scan once its
# sorted iterator passes the inclusive upper bound.
[[bench]]
name = "packed_zset_score_range"
harness = false
required-features = ["bench-reference"]

# Same-binary, null-gated instruction benchmark for avoiding the packed descending slice's
# full-record temporary materialization.
[[bench]]
name = "packed_zset_index_slice_desc"
harness = false
required-features = ["bench-reference"]

# Same-binary, null-gated instruction benchmark for skipping discarded score decodes before a
# packed ascending index window.
[[bench]]
name = "packed_zset_index_slice_asc"
harness = false
required-features = ["bench-reference"]

# (cc_fr) Same-binary null-gated A/B for GETSET's old value: clone (MOVE=false) vs move-out
# (MOVE=true).
[[bench]]
name = "getset_move"
harness = false

# (frankenredis-hincrfast) Same-binary null-gated A/B for HINCRBY/HINCRBYFLOAT existing-field
# upsert: insert(field.to_vec()) owned-key alloc vs insert_borrowed in-place value overwrite.
[[bench]]
name = "hincrby_field_clone"
harness = false

# (frankenredis-smovefast) Same-binary null-gated A/B for SMOVE's dst add: sadd(&[member.to_vec()])
# redundant member copy vs sadd(&[member]) borrowed (sadd is generic over AsRef<[u8]>).
[[bench]]
name = "smove_member_clone"
harness = false

# (frankenredis-bfincrfast) Same-binary null-gated A/B for BITFIELD INCRBY: old two-lookup
# get_no_stat+bitfield_set vs fused single-lookup bitfield_incrby.
[[bench]]
name = "bitfield_incrby_fuse"
harness = false

# (frankenredis-ek8p9) Profile-first, same-binary median-gated A/B for MOVE's
# heap-string value transfer: deep-copy + delete fallback vs O(1) relink.
[[bench]]
name = "move_key_relink"
harness = false
required-features = ["bench-reference"]

# (frankenredis-lbmk6) Same-binary A/B for the set-listpack DUMP encode: pre-lbmk6
# clone-into-Vec<Vec<u8>> + encode_listpack_strings vs direct-emit encode_set_listpack_dump.
[[bench]]
name = "set_listpack_dump"
harness = false

# (frankenredis-k1wcp) Same-binary A/B for the quicklist2 DUMP-fallback packed-node encode:
# current direct-emit vs buffered roster (the fr-persist-reverted-to path, b89361c13).
[[bench]]
name = "quicklist_dump_fallback"
harness = false

# (frankenredis-bssrh) Same-binary A/B for the listpack-sizing canonical-int probe:
# to_string round-trip (alloc) vs allocation-free listpack_int_bytes_are_canonical predicate.
[[bench]]
name = "listpack_int_probe"
harness = false

# (frankenredis-b1o02) CEILING A/B for a listpack-backed small-HASH repr: current re-pack
# (hash_from_listpack_spans) vs raw listpack.to_vec() keep — bounds the RESTORE-decode win.
[[bench]]
name = "hash_restore_ceiling"
harness = false

# (frankenredis-i229a) Same-binary A/B for the fused BITFIELD write/mixed path: per-op N-lookup
# loop vs one-lookup Store::bitfield_apply_ops.
[[bench]]
name = "bitfield_apply_ops"
harness = false

# (frankenredis-99fwc) Same-binary A/B for the list DUMP payload memoization: re-encode the
# quicklist2 wire payload every DUMP vs cache-hit Vec::clone of an unchanged list.
[[bench]]
name = "list_dump_cache"
harness = false

# (frankenredis-zsetrdbmove) Same-binary A/B for the zset RDB-load member-clone elision:
# borrowed zadd (clones each member into the collapse HashMap) vs owned zadd_plain_owned (moves).
[[bench]]
name = "zset_rdb_load_move"
harness = false

# (frankenredis-listrdbmove) Same-binary A/B for the list RDB-load element-clone elision:
# borrowed rpush (push_back(bytes.to_vec()) clone) vs owned rpush_owned (push_back move).
[[bench]]
name = "list_rdb_load_move"
harness = false

# (frankenredis-hsdumpcache) Same-binary A/B for small HASH/SET DUMP payload memoization:
# listpack re-encode vs cache-hit Vec::clone of an unchanged small hash/set.
[[bench]]
name = "hash_set_dump_cache"
harness = false

# (spop-fusion) Same-binary A/B for SPOP count: the count-x-spop loop (one get_mut per pop) vs the
# fused spop_count (one get_mut + replayed RNG). Byte-identical; measures the eliminated lookups.
[[bench]]
name = "spop_count_fusion"
harness = false

# (bitfield-resolve) Isolated A/B for the eliminated keyspace lookup in BITFIELD's resolve preamble:
# get().is_some()+get_mut() (2 foldhash lookups) vs get_mut() (1).
[[bench]]
name = "bitfield_resolve_lookup"
harness = false

# (keys-notl-guard) Same-binary A/B for keys_in_db's no-TTL guard: unguarded double key-vector
# build + reap loop vs skipping the first build + reap when expires_count == 0.
[[bench]]
name = "keys_notl_guard"
harness = false

# (hset-getmut-first) Same-binary A/B for non-LFU hset_borrowed entry resolution: get_mut-first
# (one probe, existing hash) vs internal_entry (contains_key + get_mut = two).
[[bench]]
name = "hset_getmut_first"
harness = false

# (cc_fr) Same-binary A/B for the post-insert hash encoding refresh: O(1) incremental (count +
# new field/value) vs the O(n) refresh_hash_encoding_flag re-scan of every existing field.
[[bench]]
name = "hset_encoding_refresh"
harness = false

# Same-binary A/B for live variadic HSET/HMSET: payload-bounded incremental encoding refresh vs
# the O(hash width) post-command re-scan.
[[bench]]
name = "hset_many_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HINCRBY: O(1) incremental refresh vs the O(n) rescan on a counter-map hash.
[[bench]]
name = "hincrby_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HSETNX: O(n^2) vs O(n) building a hash one absent field at a time.
[[bench]]
name = "hsetnx_encoding_refresh"
harness = false

# (cc_fr) Same A/B for HINCRBYFLOAT: O(1) incremental refresh vs the O(n) rescan on a counter map.
[[bench]]
name = "hincrbyfloat_encoding_refresh"
harness = false

# (cc_fr) Same A/B for the OWNED hset twin: O(1) incremental refresh vs the O(n) rescan.
[[bench]]
name = "hset_owned_encoding_refresh"
harness = false

# (6lgnu validation) Quantify the lazy rank-treap's per-ZADD maintenance tax: identical N-member
# builds with the treap cold (never queried) vs warm (queried once, maintained on every later ZADD).
[[bench]]
name = "zadd_treap_tax"
harness = false

# (6lgnu validation) NET structural A/B: span-augmented skiplist (order+rank in one) vs BTreeMap
# (order only) insert of identical members. skiplist/btree < treap-tax ⇒ 6lgnu net-wins the write side.
[[bench]]
name = "skiplist_vs_btreemap"
harness = false

# (cc_fr) Same-binary A/B for LPUSH on the Packed repr: push_front(bytes.to_vec()) temp-Vec vs
# push_front_borrowed(bytes) direct copy into the packed buffer. Byte-identical.
[[bench]]
name = "lpush_borrow"
harness = false

# A/B for DEL's per-key stream side-map cleanup: skip the two remove()s when both maps are empty
# (no-stream DB) vs the prior unconditional pair. Byte-identical; isolates the wasted foldhash+probe.
[[bench]]
name = "del_stream_cleanup"
harness = false

# A/B for SADD's post-add set-encoding refresh: O(1) incremental (count + new member len) vs the
# prior O(n) set_fits_listpack member-length re-scan, on a stable listpack set. Byte-identical.
[[bench]]
name = "sadd_encoding_refresh"
harness = false

# A/B for TOUCH's non-LFU per-key lookup: one lookup_live_for_read_mut vs the prior
# record_keyspace_lookup + separate get_mut (2 probes). Byte-identical; isolates the 2nd probe.
[[bench]]
name = "touch_lookup_collapse"
harness = false

# A/B for INCR's no-TTL branch: the dropped forget_volatile_key(key) no-op vs calling it, on a clean
# non-empty volatile_keys with a no-TTL key. Byte-identical; isolates the BTreeSet remove-miss O(log n).
[[bench]]
name = "incr_forget_volatile"
harness = false

# A/B for the volatile-view rebuild a TTL-preserving write (INCR-on-TTL / SET-EX re-arm) used to force
# per active-expiry cycle: mark+rebuild (old, O(n)) vs no-op rebuild (new, membership unchanged).
[[bench]]
name = "volatile_dirty_rebuild"
harness = false

# A/B for DEL's per-key last_del_removed clone: skip push(key.clone()) when keyspace notifications
# are disabled (the default) vs the prior unconditional push. Byte-identical; isolates the wasted
# per-key heap allocation dropped untouched by the notify-gated consumer.
[[bench]]
name = "del_notify_record"
harness = false

# A/B for RENAME's eight stream side-map removes: gate on a single has_stream_metadata flag when
# both keys are stream-free vs the prior unconditional eight. Byte-identical.
[[bench]]
name = "rename_stream_relink"
harness = false

# A/B for RENAMENX's four SOURCE stream side-map removes: gate on has_stream_metadata vs the prior
# unconditional four (sibling of rename_stream_relink; RENAMENX never clears the destination).
[[bench]]
name = "renamenx_stream_relink"
harness = false

# A/B for the stream side-map hasher: foldhash vs the prior std SipHash, over stream-key lookups.
[[bench]]
name = "stream_map_hasher"
harness = false

# A/B for the script_cache hasher: foldhash vs std SipHash over SHA1-hex String keys (EVALSHA).
[[bench]]
name = "script_cache_hasher"
harness = false

# A/B for eviction candidate sampling: the eligible-count step for allkeys (!volatile_only)
# policies uses O(1) entries.len() instead of a full O(n) keys().filter().count() walk.
# Byte/RNG-identical (same eligible_len value); isolates the eliminated keyspace walk.
[[bench]]
name = "eviction_count_len"
harness = false

# A/B for the RANDMEMBER/RANDFIELD COUNT distinct-index dedup: HashSet<usize> default SipHash
# vs foldhash on the exact `picked` loop. Byte-identical index sequence (dedup by value).
[[bench]]
name = "sampling_dedup_foldhash"
harness = false

# A/B for LFU spop_count probe collapse: fused one-get_mut drain (rng_seed field split) vs the
# O(count)-probe spop_count_loop_ref, under allkeys-lfu. Byte/RNG-identical (fused_matches_spop_loop).
[[bench]]
name = "spop_count_lfu_collapse"
harness = false

# A/B for LFU TOUCH probe collapse: inline record+get_mut fold + rng_seed field-split (1 probe/key)
# vs the prior 2-probe/key form, under allkeys-lfu. Byte/RNG-identical (touch_lfu_collapsed_matches).
[[bench]]
name = "touch_lfu_collapse"
harness = false

# A/B for LFU MGET probe collapse: fold record+get_mut + drop contains_key via rng_seed field-split
# (1 probe/key) vs the prior 3-probe/key form, small values, under allkeys-lfu. Byte/RNG-identical.
[[bench]]
name = "mget_lfu_collapse"
harness = false

# A/B for LFU GET probe collapse: fold record+get_mut via rng_seed field-split (1 probe) vs the prior
# 2-probe form, under allkeys-lfu; GET borrows its value so probes dominate. Byte/RNG-identical.
[[bench]]
name = "get_lfu_collapse"
harness = false

# A/B for LFU STRLEN probe collapse: fold record+get_mut + drop contains_key via rng_seed field-split
# (1 probe) vs the prior 3-probe form; STRLEN returns only a length so probes dominate. Byte-identical.
[[bench]]
name = "strlen_lfu_collapse"
harness = false

# A/B for LFU GETBIT probe collapse: fold record+get_mut + drop contains_key via rng_seed field-split
# (1 probe) vs the prior 3-probe form; GETBIT returns a single bit so probes dominate. Byte-identical.
[[bench]]
name = "getbit_lfu_collapse"
harness = false

# A/B for LFU TYPE probe collapse: fold record+get into 1 probe (no RNG, no touch) vs the prior
# 2-probe form; TYPE returns only a type enum so probes are all its work. Byte-identical.
[[bench]]
name = "type_lfu_collapse"
harness = false

# A/B for LFU EXISTS probe collapse: fold record+get_mut via rng_seed field-split (1 probe) vs the
# prior 2-probe form; EXISTS returns only a bool (any type) so probes are all its work. Byte-identical.
[[bench]]
name = "exists_lfu_collapse"
harness = false

# A/B for LFU LLEN probe collapse: fold record+get_mut + drop contains_key via rng_seed field-split
# (1 probe) vs the prior 3-probe form; LLEN returns only a length so probes dominate. Byte-identical.
[[bench]]
name = "llen_lfu_collapse"
harness = false

# A/B for LFU SCARD probe collapse: fold record+get_mut via rng_seed field-split (1 probe) vs the
# prior 2-probe form; SCARD returns only a length so probes are all its work. Byte-identical.
[[bench]]
name = "scard_lfu_collapse"
harness = false

# A/B for LFU ZCARD probe collapse: fold record+get_mut + drop contains_key via rng_seed field-split
# (1 probe) vs the prior 3-probe form; ZCARD returns only a length so probes dominate. Byte-identical.
[[bench]]
name = "zcard_lfu_collapse"
harness = false

# A/B for LFU ZSCORE probe collapse: fold record+get_mut + drop contains_key via rng_seed
# field-split (1 probe) vs the prior 3-probe form; singleton member-score lookup keeps the
# eliminated keyspace probes visible. Byte/RNG/stat-identical.
[[bench]]
name = "zscore_lfu_collapse"
harness = false

# A/B for LFU ZRANK acquisition: fold record + contains_key rand-gate + get_mut (3 probes) into
# one get_mut via rng_seed field split. Singleton packed rank lookup keeps probe cost visible.
[[bench]]
name = "zrank_lfu_collapse"
harness = false

# A/B for LFU HGET (borrowing hget_with) probe collapse: no-field-TTL fast path skips the reap +
# folds record+get_mut + drops contains_key via rng_seed field-split (1 probe) vs the prior 3-probe
# form; hget_with borrows the value so probes dominate. Byte/RNG-identical.
[[bench]]
name = "hget_lfu_collapse"
harness = false

# A/B for LFU HLEN probe collapse: no-field-TTL fast path skips the reap + folds record+get_mut +
# drops contains_key via rng_seed field-split (1 probe) vs the prior 3-probe form; HLEN returns only
# a length so probes dominate. Byte/RNG-identical.
[[bench]]
name = "hlen_lfu_collapse"
harness = false

# A/B for LFU HSTRLEN probe collapse: no-field-TTL fast path skips the reap + folds record+get_mut +
# drops contains_key via rng_seed field-split (1 probe) vs the prior 3-probe form; HSTRLEN returns
# only a field length so probes dominate. Byte/RNG-identical.
[[bench]]
name = "hstrlen_lfu_collapse"
harness = false

# A/B for LFU HEXISTS probe collapse: no-field-TTL fast path skips the reap + folds record+get_mut +
# drops contains_key via rng_seed field-split (1 probe) vs the prior 3-probe form; HEXISTS returns
# only a bool so probes dominate. Byte/RNG-identical.
[[bench]]
name = "hexists_lfu_collapse"
harness = false

# A/B for LFU GETRANGE on the borrowing runtime path: fold record+get_mut + drop contains_key via
# rng_seed field split (1 probe) vs the prior 3-probe form. The closure consumes the borrowed slice,
# so this measures the production zero-copy store path rather than the allocating fallback.
[[bench]]
name = "getrange_with_lfu_collapse"
harness = false

# A/B for the LFU HDEL write-side keyspace-probe collapse: get_mut-first + rng_seed field-split draw
# (1 probe) with inlined with_mutated_entry digest bookkeeping vs the prior contains_key rand-gate +
# with_mutated_entry (2 probes). First write-side member of the field-split vein. Byte/RNG/digest-
# identical (hdel_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "hdel_lfu_collapse"
harness = false

# A/B for the LFU SREM write-side keyspace-probe collapse: resolve the entry once and draw through
# the disjoint rng_seed field after a hit (1 probe) vs the prior contains_key rand gate + get_mut
# (2 probes). Missing-member SREM is the repeatable, production-valid timed shape.
[[bench]]
name = "srem_lfu_collapse"
harness = false

# A/B for the LFU SETBIT write-side keyspace-probe collapse: get_mut-first + rng_seed field-split
# draw (1 probe) with inlined with_mutated_entry digest bookkeeping vs the prior contains_key
# rand-gate + with_mutated_entry (2 probes). Borrowed-arg (offset+bool, no owned value) so the
# single-bit op keeps the probe a meaningful fraction. Byte/RNG/digest-identical
# (setbit_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "setbit_lfu_collapse"
harness = false

# A/B for the LFU SETRANGE write-side keyspace-probe collapse: get_mut-first + rng_seed field-split
# draw (1 probe) on both the empty-value length path and the mutating path, with inlined
# with_mutated_entry digest bookkeeping, vs the prior contains_key rand-gate + with_mutated_entry
# (2 probes). Borrowed value slice (&[u8], no owned alloc). Byte/RNG/digest-identical
# (setrange_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "setrange_lfu_collapse"
harness = false

# A/B for the LFU APPEND write-side keyspace-probe collapse: get_mut-first + rng_seed field-split
# draw (1 probe) with inlined with_mutated_entry digest bookkeeping vs the prior contains_key
# rand-gate + with_mutated_entry (2 probes). Empty-value APPEND is the non-growing repeatable timed
# shape (borrowed &[u8], no owned alloc). Byte/RNG/digest-identical (append_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "append_lfu_collapse"
harness = false

# A/B for the LFU LTRIM write-side keyspace-probe collapse: direct-get_mut with the rand draw
# relocated inside the get_mut borrow via rng_seed field split (1 probe) vs the prior contains_key
# rand-gate (2 probes). LTRIM takes no owned value (only indices); LTRIM 0 -1 is the non-growing
# keep-all repeatable timed shape. Byte/RNG-identical (ltrim_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "ltrim_lfu_collapse"
harness = false

# A/B for the LFU ZREM write-side keyspace-probe collapse: resolve the entry once and draw through
# the disjoint rng_seed field after a hit (1 probe) vs the prior contains_key rand gate + get_mut
# (2 probes). Missing-member ZREM is the repeatable, production-valid timed shape.
[[bench]]
name = "zrem_lfu_collapse"
harness = false

# A/B for the LFU ZPOPMIN-count write-side keyspace-probe collapse: resolve the entry once and draw
# through the disjoint rng_seed field after a hit (1 probe) vs the prior contains_key rand gate +
# get_mut (2 probes). ZPOPMIN key 0 is the repeatable, non-destructive timed shape.
[[bench]]
name = "zpopmin_count_lfu_collapse"
harness = false

# A/B support for the LFU ZPOPMAX-count write-side keyspace-probe experiment: resolve the entry once
# and draw through the disjoint rng_seed field after a hit (1 probe) vs production's contains_key
# rand gate + get_mut (2 probes). ZPOPMAX key 0 is the repeatable, non-destructive timed shape.
[[bench]]
name = "zpopmax_count_lfu_collapse"
harness = false

# A/B for the LFU LPOP-count write-side keyspace-probe collapse: direct-get_mut with the rand draw
# relocated inside the get_mut borrow via rng_seed field split (1 probe) vs the prior contains_key
# rand-gate (2 probes). LPOP key 0 pops nothing (no value arg) — the non-growing repeatable timed
# shape. Byte/RNG-identical (lpop_count_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "lpop_count_lfu_collapse"
harness = false

# A/B for the LFU RPOP-count write-side keyspace-probe collapse: direct-get_mut with the rand draw
# relocated inside the get_mut borrow via rng_seed field split (1 probe) vs the prior contains_key
# rand-gate (2 probes). RPOP key 0 pops nothing (no value arg) — the non-growing repeatable timed
# shape. Byte/RNG-identical (rpop_count_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "rpop_count_lfu_collapse"
harness = false

# A/B for the LFU BITCOUNT keyspace-probe collapse: draw the LFU rand inside the get_mut borrow via
# rng_seed field split (1 probe) vs the prior contains_key rand-gate (2 probes). BITCOUNT is a read
# (bumps LFU, no digest); on small bitmaps the probes dominate the O(n) popcount so the collapse
# gates. Byte/RNG-identical (bitcount_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "bitcount_lfu_collapse"
harness = false

# A/B for the LFU BITPOS keyspace-probe collapse: draw the LFU rand inside the get_mut borrow via
# rng_seed field split (1 probe) vs the prior contains_key rand-gate (2 probes). BITPOS is a read
# (bumps LFU, no digest); on small bitmaps the probes dominate the scan so the collapse gates.
# Byte/RNG-identical (bitpos_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "bitpos_lfu_collapse"
harness = false

# A/B for the LFU LPOS keyspace-probe collapse: fold record_keyspace_lookup + contains_key rand-gate
# + get_mut into one get_mut (expiry peek + rng_seed field-split draw) — 3 probes -> 1 — vs the prior
# three-probe path. LPOS is a read; on a small list the scan is negligible so the probes gate.
# Byte/RNG/stat-identical (lpos_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "lpos_lfu_collapse"
harness = false

# A/B for the LFU XLEN keyspace-probe collapse: fold record_keyspace_lookup + contains_key rand-gate
# + get_mut into one get_mut (expiry peek + rng_seed field-split draw) — 3 probes -> 1 — vs the prior
# three-probe path. XLEN is a light O(1) read so the probes dominate.
# Byte/RNG/stat-identical (xlen_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "xlen_lfu_collapse"
harness = false

# A/B for the LFU HKEYS keyspace-probe collapse: on the no-field-TTL fast path, skip
# drop_expired_hash_fields + fold record_keyspace_lookup + contains_key rand-gate + get_mut into one
# get_mut (expiry peek + rng_seed field-split draw) — 3 probes -> 1 — vs the prior three-probe path.
# Also adds a non-LFU lookup_live_for_read_mut fast path (default-config 2->1). Byte/RNG/stat-identical
# (hkeys_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "hkeys_lfu_collapse"
harness = false

# A/B for the LFU HKEYS/HVALS collapse on the ZERO-COPY production path (hcollection_borrow_scan, the
# fr-runtime borrow-scan encoder): add the LFU 3->1 fast path (get_mut-first + rng_seed field split)
# matching the already-present non-LFU one. Byte/RNG/stat-identical
# (hcollection_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "hcollection_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU LRANGE collapse on the ZERO-COPY production path (lrange_borrow_scan, the fr-runtime
# borrow-scan encoder): add the LFU 3->1 fast path (get_mut-first + rng_seed field split) matching the
# already-present non-LFU one. Byte/RNG/stat-identical
# (lrange_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "lrange_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU HGETALL collapse on the ZERO-COPY production path (hgetall_borrow_scan): add the LFU
# 3->1 fast path (get_mut-first + rng_seed field split) matching the already-present non-LFU one.
# Byte/RNG/stat-identical (hgetall_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "hgetall_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU SMEMBERS collapse on the ZERO-COPY production path (smembers_borrow_scan): fold the
# LFU path's record+get_mut (2 probes, no contains_key gate) into ONE get_mut via rng_seed field
# split, matching the already-present non-LFU one. Byte/RNG/stat-identical
# (smembers_borrow_scan_lfu_collapsed_matches_twoprobe).
[[bench]]
name = "smembers_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZRANGE collapse on the ZERO-COPY production path (zrange_borrow_scan): fold the LFU
# path's record + contains_key rand-gate + get_mut (3 probes) into ONE get_mut via rng_seed field
# split, matching the already-present non-LFU one. Byte/RNG/stat-identical
# (zrange_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrange_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZREVRANGE collapse on the ZERO-COPY production path (zrevrange_borrow_scan): the
# descending twin of the ZRANGE collapse — fold record + contains_key rand-gate + get_mut (3 probes)
# into ONE get_mut via rng_seed field split. Byte/RNG/stat-identical
# (zrevrange_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrevrange_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZRANGEBYSCORE (member-only) collapse on the ZERO-COPY production path
# (zrangebyscore_members_borrow_scan): fold record + contains_key rand-gate + get_mut (3 probes) into
# ONE get_mut via rng_seed field split, preserving the min>max empty-guard's exact hit-then-short-
# circuit order. Byte/RNG/stat-identical (zrangebyscore_members_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrangebyscore_members_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZRANGEBYSCORE WITHSCORES collapse on the ZERO-COPY production path
# (zrangebyscore_withscores_borrow_scan): the (member, score) Pair-streaming twin of the members
# collapse — fold record + contains_key rand-gate + get_mut (3 probes) into ONE get_mut via rng_seed
# field split, same min>max guard order. Byte/RNG/stat-identical
# (zrangebyscore_withscores_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrangebyscore_withscores_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZREVRANGEBYSCORE WITHSCORES collapse on the ZERO-COPY production path
# (zrevrangebyscore_withscores_borrow_scan): the descending twin — fold record + contains_key rand-gate
# + get_mut (3 probes) into ONE get_mut via rng_seed field split, same min>max guard order.
# Byte/RNG/stat-identical (zrevrangebyscore_withscores_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrevrangebyscore_withscores_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU XRANGE/XREVRANGE collapse on the ZERO-COPY production path (xrange_borrow_scan, the
# stream borrow-scan encoder): fold record + contains_key rand-gate + get_mut (3 probes) into ONE
# get_mut via rng_seed field split, matching the already-present non-LFU one. Byte/RNG/stat-identical
# (xrange_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "xrange_borrow_scan_lfu_collapse"
harness = false

# A/B for the LFU ZRANGEBYSCORE ... LIMIT (member-only) collapse on the ZERO-COPY production path
# (zrangebyscore_members_limit_borrow_scan): the LIMIT offset/count twin of the members collapse — fold
# record + contains_key rand-gate + get_mut (3 probes) into ONE get_mut via rng_seed field split, same
# min>max guard order. Byte/RNG/stat-identical
# (zrangebyscore_members_limit_borrow_scan_lfu_collapsed_matches_threeprobe).
[[bench]]
name = "zrangebyscore_members_limit_borrow_scan_lfu_collapse"
harness = false
